# browsertech-talk

./: Cargo.toml  build.sh  client.js  index.html  lib.rs  notes.md  package.json  pnpm-lock.yaml  server.mjs  worker.javascript.js  worker.js  worker.webassembly.js
wasm_tests/: test_1.js  test_1.rs  test_2.js  test_2.rs  test_3.js  test_3.rs  test_4.js  test_4.rs  test_5.js  test_5.rs  test_6.js  test_6.rs  test_6.txt  test_7.js  test_7.json  test_7.rs  test_8.js  test_8.rs
