#  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
#  ┃ ██████ ██████ ██████       █      █      █      █      █ █▄  ▀███ █       ┃
#  ┃ ▄▄▄▄▄█ █▄▄▄▄▄ ▄▄▄▄▄█  ▀▀▀▀▀█▀▀▀▀▀ █ ▀▀▀▀▀█ ████████▌▐███ ███▄  ▀█ █ ▀▀▀▀▀ ┃
#  ┃ █▀▀▀▀▀ █▀▀▀▀▀ █▀██▀▀ ▄▄▄▄▄ █ ▄▄▄▄▄█ ▄▄▄▄▄█ ████████▌▐███ █████▄   █ ▄▄▄▄▄ ┃
#  ┃ █      ██████ █  ▀█▄       █ ██████      █      ███▌▐███ ███████▄ █       ┃
#  ┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫
#  ┃ Copyright (c) 2017, the Perspective Authors.                              ┃
#  ┃ ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ ┃
#  ┃ This file is part of the Perspective library, distributed under the terms ┃
#  ┃ of the [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0). ┃
#  ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

[package]
name = "browsertech"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
js-sys = "0.3.70"
# perspective = { version = "3.0.3", path = "../../rust/perspective" }
# axum = { version = ">=0.7,<2", features = ["ws"] }
# futures = "0.3"
# tokio = { version = "1.0", features = ["full"] }
# tower-http = { version = "0.5.0", features = ["fs", "trace"] }
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22.1"
serde_json = "1.0.128"
wasm-bindgen = { version = "=0.2.93", features = ["serde-serialize"] }
# wasm-bindgen-futures = "0.4.41"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    # "Blob",
    # "Clipboard",
    # "CssStyleDeclaration",
    # "CssStyleSheet",
    # "CssRuleList",
    # "CssRule",
    # "CssStyleRule",
    # "CustomEvent",
    # "CustomEventInit",
    # "DataTransfer",
    # "Document",
    # "DomRect",
    # "DomStringMap",
    # "DomTokenList",
    # "Element",
    # "Event",
    # "EventTarget",
    # "EventListener",
    # "FontFace",
    # "FontFaceSet",
    # "FontFaceSetIterator",
    # "FontFaceSetIteratorResult",
    # "HtmlCollection",
    # "HtmlElement",
    # "HtmlTextAreaElement",
    # "HtmlStyleElement",
    # "HtmlSelectElement",
    # "InputEvent",
    # "KeyboardEvent",
    # "MutationObserver",
    # "MutationObserverInit",
    # "MutationRecord",
    # "Navigator",
    # "Node",
    # "NodeList",
    "Performance",
    "PerformanceMark",
    # "Range",
    # "ReadableStreamDefaultReader",
    # "Selection",
    # "ShadowRoot",
    # "ShadowRootMode",
    # "ShadowRootInit",
    # "StyleSheet",
    # "StyleSheetList",
    # "Url",
    # "VisibilityState",
    "Window",
]
